objects/DMAPP__Account_Pol_Map_Sub_Map__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Map_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Map Contact</label>
        <referenceTo>DMAPP__Account_Political_Map_Contact__c</referenceTo>
        <relationshipLabel>Account Pol Map Sub Maps</relationshipLabel>
        <relationshipName>Account_Pol_Map_Sub_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Map__c</fullName>
        <label>Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipLabel>Account Pol Map Sub Maps</relationshipLabel>
        <relationshipName>Account_Pol_Map_Sub_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sub_Map__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub Map</label>
        <referenceTo>DMAPP__Account_Political_Map__c</referenceTo>
        <relationshipLabel>Account Pol Map Sub Maps (Sub Map)</relationshipLabel>
        <relationshipName>Account_Pol_Map_Sub_Maps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Pol Map Sub Map</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Pol Map Sub Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>